update: 更新首页内容

--- a/assets/css/index.less
+++ b/assets/css/index.less
@@ -1,1 +1,8 @@
 @primary-bgcolor: #fff;
+
+.f-all-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
